APPDESCRIP-47. Add test for resolveModulesConstraints method to handle versions with build metadata