@@ -7,6 +7,7 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import org.apache.maven.plugin.MojoExecutionException;
@@ -305,12 +306,28 @@ class ModuleVersionServiceTest {
 
     when(moduleRegistries.getRegistries(ModuleType.BE)).thenReturn(List.of(registry));
     when(resolverFacade.getAvailableVersions(registry, dependency, ModuleType.BE))
-        .thenReturn(Optional.of(List.of("1.5.0", "invalid-version", "1.2.0", "bad.version", "1.0.0")));
+        .thenReturn(Optional.of(Arrays.asList(
+            "1.5.0", "invalid-version", "1.2.3a", "1.2.0", "bad.version", "1.0.0", null)));
 
     var result = service.resolveModulesConstraints(List.of(dependency), ModuleType.BE);
 
     assertThat(result).hasSize(1);
     assertThat(result.get(0).getVersion()).isEqualTo("1.5.0");
+  }
+
+  @Test
+  void resolveModulesConstraints_positive_versionWithBuildMetadata() throws MojoExecutionException {
+    var dependency = new Dependency("mod-foo", "^1.0.0", PreReleaseFilter.FALSE);
+    var registry = okapiRegistry();
+
+    when(moduleRegistries.getRegistries(ModuleType.BE)).thenReturn(List.of(registry));
+    when(resolverFacade.getAvailableVersions(registry, dependency, ModuleType.BE))
+        .thenReturn(Optional.of(List.of("1.5.0+build.123", "1.2.0", "1.0.0")));
+
+    var result = service.resolveModulesConstraints(List.of(dependency), ModuleType.BE);
+
+    assertThat(result).hasSize(1);
+    assertThat(result.get(0).getVersion()).isEqualTo("1.5.0+build.123");
   }
 
   private static OkapiModuleRegistry okapiRegistry() {
